<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="25dp">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_about"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edit_about_input"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/dialog_title"
        android:layout_marginTop="10dp"
        android:hint="@string/about"
        android:maxLines="1"
        android:singleLine="true"
        android:autofillHints="username"
        android:inputType="text" />

    <Button
        android:id="@+id/save_about_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@id/edit_about_input"
        android:layout_alignParentEnd="true"
        android:text="@string/save" />

    <Button
        android:id="@+id/cancel_about_btn"
        android:layout_width="wrap_content"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@id/edit_about_input"
        android:layout_toStartOf="@id/save_about_btn"
        android:layout_marginEnd="10dp"
        android:text="@string/cancel" />

</RelativeLayout>
