<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="viewModel"
            type="com.example.talkspace.viewmodels.UserViewModel" />

        <variable
            name="userDetailsFragment"
            type="com.example.talkspace.ui.UserDetailFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="#e1e1e1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@drawable/action_bar_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <include layout="@layout/user_detail_app_bar" />
        </com.google.android.material.appbar.AppBarLayout>

        <RelativeLayout
            android:id="@+id/image_frame"
            android:layout_width="195dp"
            android:layout_height="195dp"
            android:layout_marginTop="35dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/app_bar_layout">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/user_profile_image"
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:elevation="10dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:scaleType="centerCrop"
                app:shapeAppearanceOverlay="@style/ShapeAppearance.TestingTalkSpace.CornerShape"
                tools:srcCompat="@tools:sample/avatars" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/image_storage_button"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:elevation="10dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:background="#14354A"
                android:backgroundTint="#14354A"
                android:src="@drawable/ic_add"
                app:shapeAppearance="@style/ShapeAppearance.TestingTalkSpace.CornerShapeForeIconImage" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/user_used_camera"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:elevation="10dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:background="#14354A"
                android:backgroundTint="#14354A"
                android:src="@drawable/ic_camera"
                app:shapeAppearance="@style/ShapeAppearance.TestingTalkSpace.CornerShapeForeIconImage" />
        </RelativeLayout>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/user_name_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="8dp"
            android:layout_margin="12dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_frame">

            <RelativeLayout
                android:id="@+id/user_name_layout"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/user_name_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:textColor="@color/test_1"
                    android:text="@string/name_title"
                    tools:ignore="RelativeOverlap" />

                <TextView
                    android:id="@+id/user_name_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@{viewModel.userName}"
                    tools:text="Yash Parmar"
                    android:layout_marginTop="5dp"
                    android:layout_below="@id/user_name_label" />

                <ProgressBar
                    android:id="@+id/username_pro_bar"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:visibility="gone"
                    tools:visibility="visible"
                    android:layout_toStartOf="@id/edit_name_btn"
                    android:layout_alignParentTop="true"
                    android:layout_alignBottom="@id/user_name_text"
                    android:layout_marginEnd="10dp" />

                <ImageView
                    android:id="@+id/edit_name_btn"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_baseline_mode_edit_outline_24"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:onClick="@{()->userDetailsFragment.showEditNameDialog()}"
                    android:layout_alignBottom="@id/user_name_text"
                    android:contentDescription="@string/edit_username_ic_desc" />

            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/user_about_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/user_name_card"
            android:layout_margin="12dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="10dp"
            android:layout_gravity="center_vertical"
            android:padding="12dp">

            <RelativeLayout
                android:id="@+id/user_about_layout"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/user_about_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:textColor="@color/test_1"
                    android:text="@string/about_title"
                    tools:ignore="RelativeOverlap" />

                <TextView
                    android:id="@+id/user_about_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@{viewModel.userAbout}"
                    tools:text="Pikachu Coder"
                    android:layout_marginTop="5dp"
                    android:layout_below="@id/user_about_label" />

                <ProgressBar
                    android:id="@+id/userabout_pro_bar"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    tools:visibility="visible"
                    android:visibility="gone"
                    android:layout_toStartOf="@id/edit_about_btn"
                    android:layout_alignParentTop="true"
                    android:layout_alignBottom="@id/user_about_text"
                    android:layout_marginEnd="10dp" />

                <ImageView
                    android:id="@+id/edit_about_btn"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_baseline_mode_edit_outline_24"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:onClick="@{()->userDetailsFragment.showEditAboutDialog()}"
                    android:layout_alignBottom="@id/user_about_text"
                    android:contentDescription="@string/edit_username_ic_desc" />

            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/user_about_card"
            android:layout_margin="12dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="10dp"
            android:layout_gravity="center_vertical"
            android:padding="12dp">

            <RelativeLayout
                android:id="@+id/user_phone_layout"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/user_phone_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:textColor="@color/test_1"
                    android:text="@string/phone_no" />

                <TextView
                    android:id="@+id/user_phone_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@{viewModel.userData.userPhoneNumber}"
                    tools:text="+918160639228"
                    android:layout_marginTop="5dp"
                    android:layout_below="@id/user_phone_label" />

            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/sign_out_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="12dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="10dp"
            android:layout_gravity="center_vertical"
            android:padding="12dp">

            <RelativeLayout
                android:id="@+id/sign_out_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_out"
                    android:textColor="#DDC30909"
                    android:textSize="17sp"
                    android:padding="10dp"
                    tools:ignore="RelativeOverlap" />

                <ImageView
                    android:id="@+id/sign_out_icon"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentEnd="true"
                    android:layout_margin="7dp"
                    android:onClick="@{()->userDetailsFragment.logout()}"
                    android:src="@drawable/ic_baseline_logout_24"
                    android:contentDescription="@string/signout_btn_desc" />

            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>